<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#474e68"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_blog"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/line11"
        android:background="@color/slidingMenuSelected"
        android:layout_marginTop="0.1dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_slidemenu_blog"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:duplicateParentState="true"
            android:scaleType="fitCenter"
            android:src="@drawable/iv_slidemenu_blog_light"/>

        <TextView
            android:id="@+id/tv_slidemenu_blog"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:text="@string/sliding_menu_bolg"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_picturewall"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/linear_blog"
        android:background="@color/slideMenu"
        android:orientation="horizontal"
        android:layout_marginTop="0.1dp"

        >

        <ImageView
            android:id="@+id/iv_slidemenu_photo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:duplicateParentState="true"
            android:scaleType="fitXY"
            android:src="@drawable/iv_slidemenu_photo_black"
            />

        <TextView
            android:id="@+id/tv_slidemenu_photo"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:lines="1"
            android:text="@string/sliding_menu_picturewall"
            android:textColor="@color/slideMenu_text"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_person"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/linear_picturewall"
        android:orientation="horizontal"
        android:background="@color/slideMenu"
        android:layout_marginTop="0.1dp"
        >

            <ImageView
                android:id="@+id/iv_slidemenu_pc"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:duplicateParentState="true"
                android:scaleType="fitCenter"
                android:src="@drawable/iv_slidemenu_pc_black"/>

            <TextView
                android:id="@+id/tv_slidemenu_pc"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:lines="1"
                android:text="@string/sliding_menu_mycenter"
                android:textColor="@color/slideMenu_text"
                android:textSize="14sp"/>
        </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_person"
        android:background="@color/slideMenu"
        android:layout_marginTop="0.1dp"
        >
        <Button
            android:id="@+id/bloglist_log_off"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bloglist_slidemenu_shap_button"
            android:text="@string/logout"
            android:textColor="@color/slideMenu_text"
            android:textSize="15sp"
            />

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/line11"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:background="@color/slideMenu"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/bloglist_ll_pc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <com.android.rdc.rdcblog.bloglist.view.defined.RoundImageView
                android:id="@+id/iv_slidemenu_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bloglist_img_user"/>

            <TextView
                android:id="@+id/tv_slidemenu_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:lines="2"
                android:text="xjhaobang"
                android:textColor="#ffffff"
                android:textSize="18sp"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>